<resources>
    <string name="app_name">62 Rosas Tattoo</string>
    <string name="menu_home">Home</string>
    <string name="menu_showroom">Showroom</string>
    <string name="menu_professionals">Professionals</string>
    <string name="menu_favorite">Favorite tattoos</string>
    <string name="menu_client">New client</string>
    <string name="home_title">62 Rosas Tattoo</string>
    <string name="style">Style</string>
    <string name="description">Description</string>
    <string name="fav">Favorite</string>
    <string name="menu_add_tattoo">Add Tattoo</string>
    <string name="menu_edit_tattoo">Edit</string>
    <string name="menu_delete_tattoo">Delete</string>
    <string name="confirm_delete">Are you sure you want to delete this tattoo?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="name_client">Name</string>
    <string name="surname_client">Surname</string>
    <string name="email_client" translatable="false">Email</string>
    <string name="phone_client">Phone</string>
    <string name="birth_client">Birth date (DD-MM-YYYY)</string>
    <string name="showphoto_client">Show photo</string>
    <string name="register_client">Add client</string>
    <string name="menu_add_professional">Add Professional</string>
    <string name="edit_professional">Edit</string>
    <string name="delete_professional">Delete</string>
    <string name="name_professional">Name</string>
    <string name="birth_professional">Birthdate</string>
    <string name="description_professional">Description</string>
    <string name="photo_professional">Photo URL</string>
    <string name="experience_professional">Years of experience</string>
    <string name="books_opened">Books opened</string>
    <string name="client_option">Client</string>
    <string name="professional_option">Professional</string>
    <string name="tattoo_image">Upload photo</string>
    <string name="add_tattoo">Add Tattoo</string>
    <string name="edit_tattoo">Edit</string>
    <string name="delete_tattoo">Delete</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location">Location</string>
    <string name="fav_description">You can see here which of your favorite tattoos are already on Instagram.</string>
    <string name="no_fav">There are no favorite tattoos to show.</string>
    <string name="professional_subtitle">Professionals working on 62 Rosas Tattoo.</string>
    <string name="professional_information">Professional background</string>
    <string name="instagram">Instagram</string>
    <string name="tattoo_info">Style • Date</string>
    <string name="favorite_instructions">Click on the heart to see the tattoo here.</string>
    <string name="favorite_empty">There are no favorite tattoos yet.</string>
    <string name="instagram_instructions">Check if your favorite tattoos are already on Instagram.</string>
    <string name="instagram_button">Instagram</string>
    <string name="no_style">No style</string>
    <string name="no_description">No description</string>
    <string name="no_date">No date</string>
    <string name="instagram_checkbox_description">Check to confirm the tattoo is on Instagram.</string>
    <string name="professional_extra_info">Exp: %1$d | Books: %2$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="professional_registered">Professional successfully added</string>
    <string name="professional_updated">Professional successfully updated</string>
    <string name="professional_deleted">Professional successfully deleted</string>
    <string name="error_load_professionals_http">Unable to load the professional list</string>
    <string name="error_register_professional_http">Unable to load the professional</string>
    <string name="error_update_professional_http">Unable to update the professional</string>
    <string name="error_delete_professional_http">Unable to delete the professional</string>
    <string name="error_server_connection">Unable to connect to the server</string>
    <string name="client_registered">Client successfully added</string>
    <string name="error_register_client_http">Unable to add the client</string>
    <string name="tattoo_registered">Tattoo successfully added</string>
    <string name="error_register_tattoo_http">Unable to add the tattoo</string>
    <string name="error_load_clients">Unable to load the client list</string>
    <string name="error_load_professionals">Unable to load the professional list</string>
    <string name="tattoo_deleted">Tattoo successfully deleted</string>
    <string name="tattoo_updated">Tattoo successfully updated</string>
    <string name="error_delete_tattoo_http">Unable to delete the tattoo</string>
    <string name="error_update_tattoo_http">Unable to update the tattoo</string>
    <string name="error_load_tattoos">Unable to load the tattoo list</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_description_required">Description is required</string>
    <string name="error_invalid_date_format">Invalid format date (YYYY-MM-DD)</string>
    <string name="error_client_name_required">Name is required</string>
    <string name="error_client_surname_required">Surname is required</string>
    <string name="error_client_email_required">Email is required</string>
    <string name="error_unknown">Something wrong happened</string>
    <string name="confirm_delete_professional">Are you sure you want to delete this professional?</string>
    <string name="edit_professional_title">Edit professional</string>
    <string name="save">Save</string>
    <string name="image_selected">Image selected</string>
    <string name="use_add_button_to_create_professional">To register a professional use the add button.</string>
    <string name="error_years_must_be_number">Years of experience must be a number.</string>
    <string name="error_select_client_and_professional">Select client and professional</string>
    <string name="error_invalid_latitude">Invalid latitude (-90 to 90)</string>
    <string name="error_invalid_longitude">Invalid longitude (-180 to 180)</string>
    <string name="tattoo_location">Location</string>
    <string name="error_style_required">Style is required</string>
    <string name="error_style_and_description_required">Style and description are required</string>
    <string name="error_missing_required_data_reopen">Missing required fields (client/professional/date). Reopen the detail from the list.</string>
    <string name="error_invalid_lat_lon">Invalid latitude/longitude</string>
    <string name="error_coordinates_out_of_range">Coordinates out of range</string>

</resources>