<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_showroom"
        android:title="@string/menu_showroom"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_professionals"
        android:title="@string/menu_professionals"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_favorite"
        android:title="@string/menu_favorite"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_map"
        android:title="@string/menu_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_client"
        android:title="@string/menu_client"
        app:showAsAction="never" />

</menu>