<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingTop="?attr/actionBarSize"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/btnShowroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_showroom"/>

    <Button
        android:id="@+id/btnProfessionals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_professionals"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnSaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_favorite"
        android:layout_marginTop="8dp"/>
</LinearLayout>