<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/ivTattoo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="12dp">

        <TextView
            android:id="@+id/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav" />

</LinearLayout>