<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/etTattooStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/style" />

    <EditText
        android:id="@+id/etTattooDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:minLines="3"
        android:gravity="top"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/etTattooImageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tattoo_image"
        android:layout_marginTop="8dp" />

</LinearLayout>