<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivTattoo"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/style" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:text="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageButton
                android:id="@+id/btnEditTattoo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit_tattoo"
                android:src="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/btnDeleteTattoo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/delete_tattoo"
                android:src="@android:drawable/ic_menu_delete" />
        </LinearLayout>

        <com.mapbox.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="16dp"
            mapbox:mapbox_cameraTargetLat="41.648823"
            mapbox:mapbox_cameraTargetLng="-0.889085"
            mapbox:mapbox_cameraZoom="12.0"/>

    </LinearLayout>

</ScrollView>